Removed toList collector when possible