@@ -34,7 +34,6 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class StateService {
@@ -93,7 +92,7 @@ public class StateService {
         List<String> state = rolesRealm
                 .stream()
                 .map(RoleRepresentation::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         stateRepository.setState("roles-realm", state);
     }
@@ -109,7 +108,7 @@ public class StateService {
             List<String> state = client.getValue()
                     .stream()
                     .map(RoleRepresentation::getName)
-                    .collect(Collectors.toList());
+                    .toList();
 
             stateRepository.setState("roles-client-" + client.getKey(), state);
         }
@@ -127,7 +126,7 @@ public class StateService {
             List<String> resourceNames = client.getAuthorizationSettings().getResources()
                     .stream()
                     .map(ResourceRepresentation::getName)
-                    .collect(Collectors.toList());
+                    .toList();
 
             stateRepository.setState("resources-client-" + clientKey, resourceNames);
         }
@@ -171,7 +170,7 @@ public class StateService {
 
         List<String> state = requiredActions.stream()
                 .map(RequiredActionProviderRepresentation::getAlias)
-                .collect(Collectors.toList());
+                .toList();
 
         stateRepository.setState("required-actions", state);
     }
@@ -183,7 +182,7 @@ public class StateService {
 
         return components.stream()
                 .filter(component -> componentsFromState.contains(component.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void setComponents(RealmImport realmImport) {
@@ -214,7 +213,7 @@ public class StateService {
         for (Map.Entry<String, List<ComponentExportRepresentation>> subEntry : subComponents.entrySet()) {
             List<String> nameOfSubComponents = subEntry.getValue().stream()
                     .map(ComponentExportRepresentation::getName)
-                    .collect(Collectors.toList());
+                    .toList();
 
             state.addAll(nameOfSubComponents);
         }
